@@ -1675,5 +1675,11 @@ reload_view(view_info_t *vi, int silent)
 	}
 }
 
+const char *
+view_get_viewer(void)
+{
+	return vi->viewer;
+}
+
 /* vim: set tabstop=2 softtabstop=2 shiftwidth=2 noexpandtab cinoptions-=(0 : */
 /* vim: set cinoptions+=t0 filetype=c : */
