@@ -64,6 +64,11 @@ int draw_abandoned_view_mode(void);
 /* Checks whether contents of either view should be updated. */
 void view_check_for_updates(void);
 
+/* Retrieves viewer command associated with preview created with
+ * make_abandoned_view().  Returns pointer to the viewer command or NULL, if
+ * there is none. */
+const char * view_get_viewer(void);
+
 #endif /* VIFM__MODES__VIEW_H__ */
 
 /* vim: set tabstop=2 softtabstop=2 shiftwidth=2 noexpandtab cinoptions-=(0 : */
